# tyrell

./: .gitignore  .mise.toml  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix
.github/workflows/: audit.yaml  book.yaml  fmt.yaml  lint.yaml  publish.yaml  test.yaml
book/: Cargo.toml  book.toml
book/src/: chapter_1.md
examples/: boeing_2024q2_earnings_transcript.txt  earnings_call.rs  extraction.rs  forex.rs  github_issues.rs  news_sentiment.rs  question_answer.rs
src/: chat.rs  lib.rs
tests/: chat.rs  extraction.rs  simple_integration.rs
