[package]
name = "tyrell"
description = "More human than human. Interacting with LLMs in a rusty way."
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "tyrell"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
schemars = "0.8.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.128"

[dev-dependencies]
regex = "1.10.5"
test-log = { version = "0.2.16", features = ["trace"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["async-await", "log", "log-always"] }
